implemented filters, toggle todo, change todo, and change text

--- a/src/app/todos/components/main/main.component.html
+++ b/src/app/todos/components/main/main.component.html
@@ -11,6 +11,8 @@
     <app-todos-todo
       *ngFor="let todo of visibleTodos$ | async"
       [todo]="todo"
+      [isEditing]="editingId === todo.id"
+      (setEditingId)="setEditingId($event)"
     ></app-todos-todo>
   </ul>
 </section>
