--- a/src/app/todos/components/todo/todo.component.html
+++ b/src/app/todos/components/todo/todo.component.html
@@ -12,6 +12,7 @@
   <ng-container *ngIf="isEditingProps">
     <input
       class="edit"
+      #textInput
       [value]="editingText"
       (keyup)="changeText($event)"
       (keyup.enter)="changeTodo()"
